--- a/waggr/public/index.html
+++ b/waggr/public/index.html
@@ -7,12 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript">
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFnoBGTrlB9212W-BX4rHGnWvHEij9bnA+&libraries=places"></script>
+    <script type='text/javascript' src='../src/config/config_keys.js'></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
+    <!--=
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
